# project-dullahan

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/: README.md  agent.sh  agent_jobs.py  config.py  main.py  mainframe.sh
backend/routers/: agent.py  orchestrator.py  shared.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/components/: AuditHandle.vue  HealthCheck.vue
server/: main.py
src/backend/: app.py
src/backend/models/: audit_models.py
src/backend/routers/: r_audit.py
src/backend/services/: hashcat_service.py  nxc_service.py
src/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
src/frontend/src/: App.vue  main.js
src/frontend/src/components/: AuditForm.vue  Celty.vue  JobStatus.vue  ResultsDisplay.vue
src/frontend/src/router/: index.js
src/frontend/src/services/: api.js
src/frontend/src/views/: Dashboard.vue
src/project_dullahan/: app.py
