[project]
name = "project-dullahan"
version = "0.0.1"
description = "NTLM hash cracking automation via HashCat client-server functionality"
authors = [
    {name = "arcadia16",email = "arcadia16@atomicmail.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "backend.app:main"
